kubernetes/helm/core/envoy-gateway/manifests/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
      sectionName: http
  hostnames:
    - "*.sunnyvale.be"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
